--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <img src="images/sun.png" id="icon">
           <div icon="max-w-3xl mx auto px-5">
 
-          <a href="https://drive.google.com/file/d/1NjtkctezLLSX_sN4_kVR-SMUkhM_InwT/view?usp=share_link"target="_blank"class="btn">Download CV</a>
+          <a href="https://drive.google.com/file/d/1YagHHvWYP4s_hAvU51LpbEc0UvQaVmFa/view?usp=sharing"target="_blank"class="btn">Download CV</a>
           <div class="home-img">
           <img src="images/profile1.png" alt="">
           
